@@ -1,19 +1,20 @@
 0.2
 ---
  
- o get symbol size via elf instead of bfd
- o add support for samples not belonging to any symbols probably through
-   artificially created symbols
-   these two todo are perhaps worthwhile to implement now. The new filtering
-   of symbols make them less interesting. - let's wait - john
- o remaining little cleanups of output format etc. (wahat needs doing ??)
- o document gcc 2.95 and linenr info problems especially for inline functions
  o test post-profile -c0,1 --sort
  o check post profile for multiple symbols with same name
 
 Before 1.0
 ----------
 
+ o document gcc 2.95 and linenr info problems especially for inline functions
+ o remove pid filter from module ...
+ o get symbol size via elf instead of bfd
+ o add support for samples not belonging to any symbols probably through
+   artificially created symbols
+   these two todo are perhaps worthwhile to implement now. The new filtering
+   of symbols make them less interesting. - let's wait - john
+ o remaining little cleanups of output format etc. (wahat needs doing ??)
  o difference between two profile session. Difference must be made at source level. 
    (This is a part of post-prof). Difference can be made also at symbols level. Important.
  o Checkpointing 
@@ -66,6 +67,8 @@ Checks to make
  
 Later
 -----
+ 
+ o multiplexing for real
  
  o check if we can use our own RTC irq handler rather to pass through the
   the kernel service. The overhead for RTC is very big actually. Take care
