@@ -1,3 +1,15 @@
+2002-04-30  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
+	* libdb/Makefile: remove from CVS
+ 
+	* dae/oprofiled.c:
+	* module/oprofile.c: 
+	* module/oprofile.h: use better hash function.
+	  Fold unused/full entry case into eviction case
+	  for faster common path
+ 
 2002-04-27  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in: fix little blooper that shows up
